--- a/templates/caption_settings.html
+++ b/templates/caption_settings.html
@@ -79,13 +79,13 @@
                 </a>
             </div>
             
-            {% if current_platform %}
+            {% if active_platform %}
             <div class="alert alert-info">
                 <i class="bi bi-info-circle"></i>
-                <strong>Platform:</strong> {{ current_platform.name }} 
-                ({{ current_platform.platform_type|title }})
-                {% if current_platform.username %}
-                - @{{ current_platform.username }}
+                <strong>Platform:</strong> {{ active_platform.name }} 
+                ({{ active_platform.platform_type|title }})
+                {% if active_platform.username %}
+                - @{{ active_platform.username }}
                 {% endif %}
                 <br>
                 <small>These settings will be saved for this platform only.</small>
