--- a/templates/base.html
+++ b/templates/base.html
@@ -233,6 +233,10 @@
                                 {% endif %}
                                 
                                 <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="{{ url_for('profile') }}">
+                                    <i class="bi bi-person-gear me-2"></i>Profile & Settings
+                                </a></li>
+                                <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="{{ url_for('logout') }}" onclick="handleLogout(event)">
                                     <i class="bi bi-box-arrow-right me-2"></i>Logout
                                 </a></li>
