prior to sessio-consolidation

--- a/templates/review.html
+++ b/templates/review.html
@@ -152,7 +152,7 @@
     </ul>
 </nav>
 {% else %}
-<div class="alert alert-info" role="alert">
+<div class="alert alert-info alert-permanent" role="alert">
     No images pending review.
 </div>
 {% endif %}
