--- a/templates/base.html
+++ b/templates/base.html
@@ -236,6 +236,14 @@
                                 <li><a class="dropdown-item" href="{{ url_for('profile') }}">
                                     <i class="bi bi-person-gear me-2"></i>Profile & Settings
                                 </a></li>
+                                {% if current_user_safe and current_user_safe.role.value == 'admin' %}
+                                <li><a class="dropdown-item" href="{{ url_for('app_management') }}">
+                                    <i class="bi bi-gear-fill me-2"></i>App Management
+                                </a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('user_management') }}">
+                                    <i class="bi bi-people me-2"></i>User Management
+                                </a></li>
+                                {% endif %}
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="{{ url_for('logout') }}" onclick="handleLogout(event)">
                                     <i class="bi bi-box-arrow-right me-2"></i>Logout
