--- a/templates/batch_review.html
+++ b/templates/batch_review.html
@@ -388,7 +388,7 @@
 
 <div class="toast-container position-fixed bottom-0 end-0 p-3"></div>
 {% else %}
-<div class="alert alert-info" role="alert">
+<div class="alert alert-info alert-permanent" role="alert">
     No images pending batch review.
 </div>
 {% endif %}
